# Abdoul202-agriwater-optimizer-V2

./: .gitignore  README.md  render.yaml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/agriwater/: __init__.py  config.py
backend/agriwater/data/: generator.py
backend/agriwater/optimizer/: engine.py  models.py
backend/agriwater/weather/: forecast.py
backend/api/: main.py  schemas.py
backend/api/routes/: config.py  optimize.py  weather.py
backend/tests/: test_generator.py  test_optimizer.py  test_weather.py
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Charts.tsx  MetricCard.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: Config.tsx  Dashboard.tsx  Optimizer.tsx  Weather.tsx
